temporary commit to resolve some compilation problems